; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/rc/extr_ene_ir.c_ene_tx_irqsim.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/rc/extr_ene_ir.c_ene_tx_irqsim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ene_device = type { i32 }
%struct.timer_list = type { i32 }

@tx_sim_timer = common dso_local global i32 0, align 4
@dev = common dso_local global %struct.ene_device* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timer_list*)* @ene_tx_irqsim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ene_tx_irqsim(%struct.timer_list* %0) #0 {
  %2 = alloca %struct.timer_list*, align 8
  %3 = alloca %struct.ene_device*, align 8
  %4 = alloca i64, align 8
  store %struct.timer_list* %0, %struct.timer_list** %2, align 8
  %5 = load %struct.ene_device*, %struct.ene_device** %3, align 8
  %6 = ptrtoint %struct.ene_device* %5 to i32
  %7 = load %struct.timer_list*, %struct.timer_list** %2, align 8
  %8 = load i32, i32* @tx_sim_timer, align 4
  %9 = call %struct.ene_device* @from_timer(i32 %6, %struct.timer_list* %7, i32 %8)
  store %struct.ene_device* %9, %struct.ene_device** %3, align 8
  %10 = load %struct.ene_device*, %struct.ene_device** %3, align 8
  %11 = getelementptr inbounds %struct.ene_device, %struct.ene_device* %10, i32 0, i32 0
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load %struct.ene_device*, %struct.ene_device** %3, align 8
  %15 = call i32 @ene_tx_sample(%struct.ene_device* %14)
  %16 = load %struct.ene_device*, %struct.ene_device** %3, align 8
  %17 = getelementptr inbounds %struct.ene_device, %struct.ene_device* %16, i32 0, i32 0
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @spin_unlock_irqrestore(i32* %17, i64 %18)
  ret void
}

declare dso_local %struct.ene_device* @from_timer(i32, %struct.timer_list*, i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @ene_tx_sample(%struct.ene_device*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
